2008-05-21  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add support for the DOLT libtool replacement.

2008-05-19  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Change the way CPPFLAGS/CFLAGS are passed to libgc one more
	time. This time, we collect them in two variables and pass these to libgc
	configure instead of using the standard CPPFLAGS/CFLAGS, to prevent problems
	during reconfiguring. Also pass '-mno-tls-direct-segment-refs' to libgc 
	configure, hopefully fixing #385006.

2008-05-15  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a check for sgen and __thread. Fixes #347171.

2008-05-14  Atsushi Enomoto  <atsushi@ximian.com>

	* configure.in, data/Makefile.am, data/dotnet35.pc : 
	  add new package for .net framework 3.5 libs.

2008-05-12  Raja R Harinath  <harinath@hurrynot.org>

	* scripts/mono-service.in: Undo 2008-05-08.  '2>&1' is not a bash-ism.

2008-05-09  Zoltan Varga  <zovarga@debian.chello.hu>

	* Makefile.am (get-monolite-latest): Create mcs/lib if not existing.

2008-05-08  Robert Jordan  <robertjj@gmx.net>

	* scripts/mono-service.in: Replace bash-ism with `sh' syntax.

2008-05-07  Sebastien Pouliot  <sebastien@ximian.com>

	* data/net_[1_1|2_0]/machine.config: Add entry to remap the public 
	key used by Silverlight 2.0 platform assemblies. Needed in both 
	profiles since SN uses 1.0.

2008-05-05  Andreas Färber  <andreas.faerber@web.de>

	* configure.in: Detect ppc64 target architecture.
	
	Contributed unter MIT/X11 license.

2008-04-29  Kornél Pál  <kornelpal@gmail.com>

	* configure.in: Check for sys/utime.h.
	* winconfig.h: Define HAVE_SYS_UTIME_H, undef HAVE_UTIME_H.

2008-04-28  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Use lowercase for 'integrity of package' for consistency.

2008-04-28  Geoff Norton  <gnorton@novell.com>

	* build-iphone.sh: Some updates to work with the latest SDK.

2008-04-24  Zoltan Varga  <vargaz@gmail.com>
